--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,4 +1,45 @@
 
+
+.section_gallery{
+  margin-top: 10rem!important;
+}
+
+.section_gallery__grid__item {
+  padding-right: .5rem;
+  padding-bottom: 1rem;
+  padding-left: .5rem;
+}
+
+.section_gallery__grid__item>a {
+  position: relative;
+  display: block
+}
+
+.section_gallery__grid__item>a:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: "";
+  transition: opacity .3s;
+  opacity: 0;
+  background-color: rgba(0,0,0,.5)
+}
+
+.section_gallery__grid__item>a:after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  content: url(../images/icon_plus.svg);
+  transition: opacity .3s;
+  transform: translate(-50%,-50%);
+  opacity: 0
+}
+
+.section_gallery__grid__item>a:hover:after,.section_gallery__grid__item>a:hover:before {
+  opacity: 1
+}
 .navbar:before {
   position: absolute;
   z-index: -1;
@@ -142,25 +183,29 @@
 }
 
 @media screen and (max-width: 768px) {
+.sobre_nosaltres_titol{
+  text-align: center;
+}
+
+.sobre_nosaltres_text{
+  text-align: justify!important;;
+}
+
+  .slogan{
+    display: none;
+  }
 
   .sobre_nosaltres::before{
-    display: block;
-    width: 30px;
-    margin: 1rem 0;
-    content: "";
-    border-top: 3px solid #806345;
+    display: none;
   
   }
   
   .sobre_nosaltres_media{
-    padding: 0 20% 0 0;
-    position: relative;
-    min-height: 500px;
+    display: none;
   }
 
   .img_sobre_nosaltres{
-    max-width: 80%;
-    height: auto;
+    display: none;
   }
 }
 
@@ -249,12 +294,11 @@ body{
   
   .item__description {
     font-family: Lato,sans-serif;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 400;
     line-height: 1.7;
     text-align: left;
     color: #777;
-    background-color: #fff;
     margin-bottom: 40px;
   }
 
@@ -337,6 +381,18 @@ body{
   max-height: 100%
 }
 
+
+.section_dishes{
+  margin-top: 10rem!important;
+}
+
+.section_carta{
+  margin-top: 10rem!important;
+  border-top: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
+  background-color: #f0f0f0;
+
+}
 
 
     
